--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <img src="./images/MainCook.png" alt="4 cooks cartoon characters">
         <ul>
-        <li><a href="recipes/Homemade-Mac-and-Cheese.html">Homemade Mac and Cheese</a></li>
+            <li><a href="recipes/Classic-Restaurant-Ceasar-Salad.html">Classic Restaurant Caesar Salad</a></li>
+            <li><a href="./recipes/Easy-Meatloaf.html">Easy Meatloaf</a></li>
+            <li><a href="recipes/Homemade-Mac-and-Cheese.html">Homemade Mac and Cheese</a></li>
         </ul>
     </body>
 
