Add style to all pages

--- a/recipes/Classic-Restaurant-Ceasar-Salad.html
+++ b/recipes/Classic-Restaurant-Ceasar-Salad.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset ="UFO-8">
         <title>Classic Restaurant Caesar Salad</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Classic Restaurant Caesar Salad</h1>
+        <h1 class="page-title">Classic Restaurant Caesar Salad</h1>
         <img src="../images/CRCS.jpg" alt="Salad with croutons and cheese">
         
-        <h2>Description</h2>
+        <h2 class="section-title">Description</h2>
         <p>I used to work at a very fancy restaurant while I was in college. 
             The best part of the job was making table side salads, entrees, 
             and dessert. This was the best Caesar salad I have ever had! 
@@ -18,7 +19,7 @@
             and the hard edges of the croutons cut into the anchovy.
         </p>
 
-        <h2>Ingredients</h2>
+        <h2 class="section-title">Ingredients</h2>
         <ul>
             <li>2 cloves garlic, finely chopped</li>
             <li>3 anchovy fillets</li>
@@ -34,7 +35,7 @@
             <li>2 tablespoons croutons</li>
         </ul>
         
-        <h2>Steps</h2>
+        <h2 class="section-title">Steps</h2>
         <ol>
             <li>Mash garlic with anchovies in a large salad bowl. 
                 Whisk lemon juice, red wine vinegar, Dijon mustard, 
@@ -48,7 +49,7 @@
                 topped with croutons.</li>
         </ol>
 
-        <h2>Editor's Note:</h2>
+        <h2 class="section-title">Editor's Note:</h2>
         <p>This recipe contains raw egg. We recommend that pregnant 
             women, young children, the elderly, and the infirm do 
             not consume raw egg.</p>
