--- a/recipes/Easy-Meatloaf.html
+++ b/recipes/Easy-Meatloaf.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UFO-8">
         <title>Easy Meatloaf</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Easy Meatloaf</h1>
+        <h1 class="page-title">Easy Meatloaf</h1>
         <img src="../images/EML.jpg" alt="Meatloaf">
-        <h2>Description</h2>
+        <h2 class="section-title">Description</h2>
         <p>This meatloaf doesn't take long to 
             make at all, and it's very good!</p>
-        <h2>Ingredients</h2>
+        <h2 class="section-title">Ingredients</h2>
         <ul>
             <li>1 ½ pounds ground beef</li>
             <li>1 egg</li>
@@ -22,7 +23,7 @@
             <li>2 tablespoons brown sugar</li>
             <li>2 tablespoons prepared mustard</li>
         </ul>
-        <h2>Directions</h2>
+        <h2 class="section-title">Directions</h2>
         <ol>
             <li>Preheat the oven to 350 degrees F (175 degrees C). 
                 Lightly grease a 9x5-inch loaf pan.</li>
