--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UFO-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="page-title">Odin Recipes</h1>
         <img src="./images/MainCook.png" alt="4 cooks cartoon characters">
         <ul>
             <li><a href="recipes/Classic-Restaurant-Ceasar-Salad.html">Classic Restaurant Caesar Salad</a></li>
