--- a/recipes/Homemade-Mac-and-Cheese.html
+++ b/recipes/Homemade-Mac-and-Cheese.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Homemade Mac and Cheese</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Homemade Mac and Cheese</h1>
+    <h1 class="page-title">Homemade Mac and Cheese</h1>
     <img src="../images/MNCpic.jpg" alt="Spoon of Mac and Cheese">
-    <h2>Description</h2> 
+    <h2 class="section-title">Description</h2> 
     <p>This classic baked mac and cheese recipe with a buttered bread 
         crumb topping is creamy and comforting. It's easy to make the 
         cheese sauce from scratch on your stovetop, starting with a 
@@ -18,8 +19,8 @@
         meats, sloppy Joes, fried chicken or alongside a salad for a meatless 
         dinner.</p>
     
-    <h2>Ingredients</h2>
-    <h3>Macaroni and Cheese:</h3>
+    <h2 class="section-title">Ingredients</h2>
+    <h3 class="subsection-title">Macaroni and Cheese:</h3>
     <ul>
         <li>8 ounces uncooked elbow macaroni</li>
         <li>¼ cup salted butter</li>
@@ -29,13 +30,13 @@
         <li>½ cup finely grated Parmesan cheese</li>
         <li>salt and ground black pepper to taste (Optional)</li>
     </ul>
-    <h3>Bread Crumb Topping:</h3>
+    <h3 class="subsection-title">Bread Crumb Topping:</h3>
     <ul>
         <li>2 tablespoons salted butter</li>
         <li>½ cup dry bread crumbs</li>
         <li>1 pinch ground paprika</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="section-title">Steps</h2>
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C). 
             Grease an 8-inch square baking dish.</li>
